--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -63,21 +63,7 @@
                         <a href="/pages/home" class="nav-item nav-link">Башкы бет</a>
                         <a href="/pages/about" class="nav-item nav-link">Маалымат</a>
                         <a href="/pages/jelmayan" class="nav-item nav-link">Jelmayan</a>
-<!--                        <a href="/pages/service" class="nav-item nav-link">Service</a>-->
-<!--                        <div class="nav-item dropdown">-->
-<!--                            <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Cars</a>-->
-<!--                            <div class="dropdown-menu rounded-0 m-0">-->
-<!--                                <a href="/pages/car" class="dropdown-item">Car Listing</a>-->
-<!--                                <a href="/pages/booking" class="dropdown-item">Car Booking</a>-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                        <div class="nav-item dropdown">-->
-<!--                            <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Pages</a>-->
-<!--                            <div class="dropdown-menu rounded-0 m-0">-->
-<!--                                <a href="/pages/team" class="dropdown-item">The Team</a>-->
-<!--                                <a href="/pages/testimonial" class="dropdown-item">Testimonial</a>-->
-<!--                            </div>-->
-<!--                        </div>-->
+
                         <a href="/pages/contact" class="nav-item nav-link">Контакт</a>
                     </div>
                     <!--                        <div class="nav-item dropdown">-->
@@ -97,52 +83,9 @@
 
 <!-- Search Start -->
 <div class="container-fluid bg-white pt-3 px-lg-5">
-    <!--        <div class="row mx-n2">-->
-    <!--            <div class="col-xl-2 col-lg-4 col-md-6 px-2">-->
-    <!--                <select class="custom-select px-4 mb-3" style="height: 50px;">-->
-    <!--                    <option selected>Pickup Location</option>-->
-    <!--                    <option value="1">Location 1</option>-->
-    <!--                    <option value="2">Location 2</option>-->
-    <!--                    <option value="3">Location 3</option>-->
-    <!--                </select>-->
-    <!--            </div>-->
-    <!--            <div class="col-xl-2 col-lg-4 col-md-6 px-2">-->
-    <!--                <select class="custom-select px-4 mb-3" style="height: 50px;">-->
-    <!--                    <option selected>Drop Location</option>-->
-    <!--                    <option value="1">Location 1</option>-->
-    <!--                    <option value="2">Location 2</option>-->
-    <!--                    <option value="3">Location 3</option>-->
-    <!--                </select>-->
-    <!--            </div>-->
-    <!--            <div class="col-xl-2 col-lg-4 col-md-6 px-2">-->
-    <!--                <div class="date mb-3" id="date" data-target-input="nearest">-->
-    <!--                    <input type="text" class="form-control p-4 datetimepicker-input" placeholder="Pickup Date"-->
-    <!--                        data-target="#date" data-toggle="datetimepicker" />-->
-    <!--                </div>-->
-    <!--            </div>-->
-    <!--            <div class="col-xl-2 col-lg-4 col-md-6 px-2">-->
-    <!--                <div class="time mb-3" id="time" data-target-input="nearest">-->
-    <!--                    <input type="text" class="form-control p-4 datetimepicker-input" placeholder="Pickup Time"-->
-    <!--                        data-target="#time" data-toggle="datetimepicker" />-->
-    <!--                </div>-->
-    <!--            </div>-->
-    <!--            <div class="col-xl-2 col-lg-4 col-md-6 px-2">-->
-    <!--                <select class="custom-select px-4 mb-3" style="height: 50px;">-->
-    <!--                    <option selected>Select A Car</option>-->
-    <!--                    <option value="1">Car 1</option>-->
-    <!--                    <option value="2">Car 1</option>-->
-    <!--                    <option value="3">Car 1</option>-->
-    <!--                </select>-->
-    <!--            </div>-->
-    <!--            <div class="col-xl-2 col-lg-4 col-md-6 px-2">-->
-    <!--                <button class="btn btn-primary btn-block mb-3" type="submit" style="height: 50px;">Search</button>-->
-    <!--            </div>-->
-    <!--        </div>-->
+
 </div>
-<!-- Search End -->
 
-
-<!-- Page Header Start -->
 <div class="container-fluid page-header">
     <h1 class="display-3 text-uppercase text-white mb-3">Маалымат</h1>
     <div class="d-inline-flex text-white">
@@ -192,43 +135,42 @@
         </div>
     </div>
 </div>
-<!-- About End -->
 
-<!-- Footer Start -->
 <div class="container-fluid bg-secondary py-5 px-sm-3 px-md-5" style="margin-top: 90px;">
     <div class="row pt-5">
         <div class="col-lg-3 col-md-6 mb-5">
-            <h4 class="text-uppercase text-light mb-4">Get In Touch</h4>
-            <p class="mb-2"><i class="fa fa-map-marker-alt text-white mr-3"></i>123 Street, New York, USA</p>
-            <p class="mb-2"><i class="fa fa-phone-alt text-white mr-3"></i>+012 345 67890</p>
-            <p><i class="fa fa-envelope text-white mr-3"></i>info@example.com</p>
-            <h6 class="text-uppercase text-white py-2">Follow Us</h6>
+            <h4 class="text-uppercase text-light mb-4">Байланыш</h4>
+            <p class="mb-2"><i class="fa fa-map-marker-alt text-white mr-3"></i>Ден Сяопино 226, Бишкек</p>
+            <p class="mb-2"><i class="fa fa-phone-alt text-white mr-3"></i>+996772 468 888</p>
+            <p><i class="fa fa-envelope text-white mr-3"></i>info@juguruk.kg</p>
+            <h6 class="text-uppercase text-white py-2">Социалдык тармактар</h6>
             <div class="d-flex justify-content-start">
-                <a class="btn btn-lg btn-dark btn-lg-square"
-                   href="https://wa.me/996776203384"
+                <a class="btn btn-lg btn-dark btn-lg-square mr-2"
+                   href="https://wa.me/996 755 001 008"
                    target="_blank">
                     <i class="fab fa-whatsapp"></i>
                 </a>
+
                 <a class="btn btn-lg btn-dark btn-lg-square"
-                   href="https://www.instagram.com/alym_kg/"
+                   href="https://www.instagram.com/ramazan.suiumbekuulu/"
                    target="_blank">
                     <i class="fab fa-instagram"></i>
                 </a>
+
             </div>
         </div>
         <div class="col-lg-3 col-md-6 mb-5">
-            <h4 class="text-uppercase text-light mb-4">Usefull Links</h4>
+            <h4 class="text-uppercase text-light mb-4">Пайдалуу шилтемелер</h4>
             <div class="d-flex flex-column justify-content-start">
-                <a class="text-body mb-2" href="#"><i class="fa fa-angle-right text-white mr-2"></i>Private Policy</a>
-                <a class="text-body mb-2" href="#"><i class="fa fa-angle-right text-white mr-2"></i>Term & Conditions</a>
-                <a class="text-body mb-2" href="#"><i class="fa fa-angle-right text-white mr-2"></i>New Member Registration</a>
-                <a class="text-body mb-2" href="#"><i class="fa fa-angle-right text-white mr-2"></i>Affiliate Programme</a>
-                <a class="text-body mb-2" href="#"><i class="fa fa-angle-right text-white mr-2"></i>Return & Refund</a>
-                <a class="text-body" href="#"><i class="fa fa-angle-right text-white mr-2"></i>Help & FQAs</a>
+                <a class="text-body mb-2" href="#"><i class="fa fa-angle-right text-white mr-2"></i>Жашыруун саясат</a>
+                <a class="text-body mb-2" href="#"><i class="fa fa-angle-right text-white mr-2"></i>Шарттар жана шарттар</a>
+                <a class="text-body mb-2" href="#"><i class="fa fa-angle-right text-white mr-2"></i>Каттоо</a>
+                <a class="text-body mb-2" href="#"><i class="fa fa-angle-right text-white mr-2"></i>Кайтаруу</a>
+                <a class="text-body" href="#"><i class="fa fa-angle-right text-white mr-2"></i>Жардам</a>
             </div>
         </div>
         <div class="col-lg-3 col-md-6 mb-5">
-            <h4 class="text-uppercase text-light mb-4">Car Gallery</h4>
+            <h4 class="text-uppercase text-light mb-4"> Juguruk</h4>
             <div class="row mx-n1">
                 <div class="col-4 px-1 mb-2">
                     <a href=""><img class="w-100" th:src="@{/img/gallery-1.jpg}" alt=""></a>
