--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -30,7 +30,7 @@
 </head>
 
 <body>
-<!-- Topbar Start -->
+
 <div class="container-fluid bg-dark py-3 px-lg-5 d-none d-lg-block">
     <div class="row">
         <div class="col-md-6 text-center text-lg-left mb-2 mb-lg-0">
@@ -45,10 +45,10 @@
         </div>
     </div>
 </div>
-<!-- Topbar End -->
 
 
-<!-- Navbar Start -->
+
+
 <div class="container-fluid position-relative nav-bar p-0">
     <div class="position-relative px-lg-5" style="z-index: 9;">
         <nav class="navbar navbar-expand-lg bg-secondary navbar-dark py-3 py-lg-0 pl-3 pl-lg-5">
@@ -69,10 +69,10 @@
         </nav>
     </div>
 </div>
-<!-- Navbar End -->
 
 
-<!-- Page Header Start -->
+
+
 <div class="container-fluid page-header">
     <h1 class="display-3 text-uppercase text-white mb-3">Контакт</h1>
     <div class="d-inline-flex text-white">
@@ -81,8 +81,7 @@
         <h6 class="text-uppercase text-body m-0">Контакт</h6>
     </div>
 </div>
-<!-- Page Header Start -->
-<!-- Contact Start -->
+
 <div class="container-fluid py-5">
     <div class="container pt-5 pb-3">
         <h1 class="display-4 text-uppercase text-center mb-5">Байланыш</h1>
@@ -90,7 +89,7 @@
             <p class="lead">Биздин электр лаболор жөнүндө суроолоруңуз болсо, тартынбаңыз! Биз сизге жардам берүүгө даярбыз.</p>
         </div>
 
-        <!-- Вариант 3 с цветом bg-primary-subtle -->
+
         <div class="row justify-content-center">
             <div class="col-lg-8">
                 <div class="bg-light p-5 rounded">
@@ -153,7 +152,7 @@
             <h6 class="text-uppercase text-white py-2">Социалдык тармактар</h6>
             <div class="d-flex justify-content-start">
                 <a class="btn btn-lg btn-dark btn-lg-square mr-2"
-                   href="https://wa.me/996776203384"
+                   href="https://wa.me/996 755 001 008"
                    target="_blank">
                     <i class="fab fa-whatsapp"></i>
                 </a>
@@ -207,7 +206,6 @@
 <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="fa fa-angle-double-up"></i></a>
 
 
-<!-- JavaScript Libraries -->
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
 <script th:src="@{/lib/easing/easing.min.js}"></script>
@@ -217,7 +215,6 @@
 <script th:src="@{/lib/tempusdominus/js/moment-timezone.min.js}"></script>
 <script th:src="@{/lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js}"></script>
 
-<!-- Template Javascript -->
 <script th:src="@{/js/main.js}"></script>
 </body>
 
