--- a/src/main/resources/templates/jelmayan.html
+++ b/src/main/resources/templates/jelmayan.html
@@ -38,7 +38,7 @@
     <div class="row">
         <div class="col-md-6 text-center text-lg-left mb-2 mb-lg-0">
             <div class="d-inline-flex align-items-center">
-                <a class="text-body pr-3" href=""><i class="fa fa-phone-alt mr-2"></i>+012 345 6789</a>
+                <a class="text-body pr-3" href=""><i class="fa fa-phone-alt mr-2"></i>+996755001008</a>
             </div>
         </div>
         <div class="col-md-6 text-center text-lg-right">
@@ -89,19 +89,19 @@
                     </div>
                     <div class="car-content">
                         <h4 class="car-title">Муравей 2025</h4>
-                        <div class="car-price">150000 сом</div>
+                        <div class="car-price">105000 сом</div>
                         <div class="car-details">
                             <div class="car-detail">
-                                <i class="fas fa-tachometer-alt"></i> 80km
+                                <i class="fas fa-tachometer-alt"></i> 1T
                             </div>
                             <div class="car-detail">
                                 <i class="fas fa-car"></i> Электро
                             </div>
                         </div>
-                        <button class="car-btn" onclick="openWhatsApp('Муравей 2023', '50000')">
+                        <button class="car-btn" onclick="openWhatsApp('Муравей 2023', '105000')">
                             <i class="fab fa-whatsapp mr-2"></i>Заказать
                         </button>
-                        
+
                     </div>
                 </div>
             </div>
@@ -115,16 +115,16 @@
                     </div>
                     <div class="car-content">
                         <h4 class="car-title">Муравей 2023</h4>
-                        <div class="car-price">50000 сом</div>
+                        <div class="car-price">130000 сом</div>
                         <div class="car-details">
                             <div class="car-detail">
-                                <i class="fas fa-tachometer-alt"></i> 100km
+                                <i class="fas fa-tachometer-alt"></i> 1.5T
                             </div>
                             <div class="car-detail">
                                 <i class="fas fa-car"></i> Электро
                             </div>
                         </div>
-                        <button class="car-btn" onclick="openWhatsApp('Муравей 2023', '50000')">
+                        <button class="car-btn" onclick="openWhatsApp('Муравей 2023', '130000')">
                             <i class="fab fa-whatsapp mr-2"></i>Заказать
                         </button>
                     </div>
@@ -140,16 +140,16 @@
                     </div>
                     <div class="car-content">
                         <h4 class="car-title">Labo 2025</h4>
-                        <div class="car-price">60,600 сом</div>
+                        <div class="car-price">250000 сом</div>
                         <div class="car-details">
                             <div class="car-detail">
-                                <i class="fas fa-tachometer-alt"></i> 200km
+                                <i class="fas fa-tachometer-alt"></i> 100km
                             </div>
                             <div class="car-detail">
                                 <i class="fas fa-car"></i> Электро
                             </div>
                         </div>
-                        <button class="car-btn" onclick="openWhatsApp('BMW X5 2023', '61600')">
+                        <button class="car-btn" onclick="openWhatsApp('Лабо 2025', '250000')">
                             <i class="fab fa-whatsapp mr-2"></i>Заказать
                         </button>
                     </div>
@@ -165,16 +165,16 @@
                     </div>
                     <div class="car-content">
                         <h4 class="car-title">Муравей 2025</h4>
-                        <div class="car-price">57000 сом</div>
+                        <div class="car-price">130000 сом</div>
                         <div class="car-details">
                             <div class="car-detail">
-                                <i class="fas fa-tachometer-alt"></i>80km
+                                <i class="fas fa-tachometer-alt"></i>1.5T
                             </div>
                             <div class="car-detail">
                                 <i class="fas fa-car"></i> Электро
                             </div>
                         </div>
-                        <button class="car-btn" onclick="openWhatsApp('Mercedes C-Class 2023', '43550')">
+                        <button class="car-btn" onclick="openWhatsApp('Муравей 2025', '130000')">
                             <i class="fab fa-whatsapp mr-2"></i>Заказать
                         </button>
                     </div>
@@ -190,16 +190,16 @@
                     </div>
                     <div class="car-content">
                         <h4 class="car-title">Лабо 2025</h4>
-                        <div class="car-price">$69,900</div>
+                        <div class="car-price">250000 сом</div>
                         <div class="car-details">
                             <div class="car-detail">
-                                <i class="fas fa-tachometer-alt"></i> 150km
+                                <i class="fas fa-tachometer-alt"></i> 100km
                             </div>
                             <div class="car-detail">
                                 <i class="fas fa-car"></i> Электро
                             </div>
                         </div>
-                        <button class="car-btn" onclick="openWhatsApp('Audi A4 2022', '39900')">
+                        <button class="car-btn" onclick="openWhatsApp('Лабо 2022', '250000')">
                             <i class="fab fa-whatsapp mr-2"></i>Заказать
                         </button>
                     </div>
@@ -215,16 +215,16 @@
                     </div>
                     <div class="car-content">
                         <h4 class="car-title">Муравей 2025</h4>
-                        <div class="car-price">66,540</div>
+                        <div class="car-price">130000 сом</div>
                         <div class="car-details">
                             <div class="car-detail">
-                                <i class="fas fa-tachometer-alt"></i> 200km
+                                <i class="fas fa-tachometer-alt"></i> 1.5Т
                             </div>
                             <div class="car-detail">
                                 <i class="fas fa-car"></i> Электро
                             </div>
                         </div>
-                        <button class="car-btn" onclick="openWhatsApp('Ford Mustang 2023', '28540')">
+                        <button class="car-btn" onclick="openWhatsApp('Муравей 2023', '130000')">
                             <i class="fab fa-whatsapp mr-2"></i>Заказать
                         </button>
                     </div>
@@ -239,37 +239,38 @@
 <div class="container-fluid bg-secondary py-5 px-sm-3 px-md-5" style="margin-top: 90px;">
     <div class="row pt-5">
         <div class="col-lg-3 col-md-6 mb-5">
-            <h4 class="text-uppercase text-light mb-4">Get In Touch</h4>
-            <p class="mb-2"><i class="fa fa-map-marker-alt text-white mr-3"></i>123 Street, New York, USA</p>
-            <p class="mb-2"><i class="fa fa-phone-alt text-white mr-3"></i>+012 345 67890</p>
-            <p><i class="fa fa-envelope text-white mr-3"></i>info@example.com</p>
-            <h6 class="text-uppercase text-white py-2">Follow Us</h6>
+            <h4 class="text-uppercase text-light mb-4">Байланыш</h4>
+            <p class="mb-2"><i class="fa fa-map-marker-alt text-white mr-3"></i>Ден Сяопино 226, Бишкек</p>
+            <p class="mb-2"><i class="fa fa-phone-alt text-white mr-3"></i>+996772 468 888</p>
+            <p><i class="fa fa-envelope text-white mr-3"></i>info@juguruk.kg</p>
+            <h6 class="text-uppercase text-white py-2">Социалдык тармактар</h6>
             <div class="d-flex justify-content-start">
-                <a class="btn btn-lg btn-dark btn-lg-square"
+                <a class="btn btn-lg btn-dark btn-lg-square mr-2"
                    href="https://wa.me/996776203384"
                    target="_blank">
                     <i class="fab fa-whatsapp"></i>
                 </a>
+
                 <a class="btn btn-lg btn-dark btn-lg-square"
-                   href="https://www.instagram.com/alym_kg/"
+                   href="https://www.instagram.com/ramazan.suiumbekuulu/"
                    target="_blank">
                     <i class="fab fa-instagram"></i>
                 </a>
+
             </div>
         </div>
         <div class="col-lg-3 col-md-6 mb-5">
-            <h4 class="text-uppercase text-light mb-4">Usefull Links</h4>
+            <h4 class="text-uppercase text-light mb-4">Пайдалуу шилтемелер</h4>
             <div class="d-flex flex-column justify-content-start">
-                <a class="text-body mb-2" href="#"><i class="fa fa-angle-right text-white mr-2"></i>Private Policy</a>
-                <a class="text-body mb-2" href="#"><i class="fa fa-angle-right text-white mr-2"></i>Term & Conditions</a>
-                <a class="text-body mb-2" href="#"><i class="fa fa-angle-right text-white mr-2"></i>New Member Registration</a>
-                <a class="text-body mb-2" href="#"><i class="fa fa-angle-right text-white mr-2"></i>Affiliate Programme</a>
-                <a class="text-body mb-2" href="#"><i class="fa fa-angle-right text-white mr-2"></i>Return & Refund</a>
-                <a class="text-body" href="#"><i class="fa fa-angle-right text-white mr-2"></i>Help & FQAs</a>
+                <a class="text-body mb-2" href="#"><i class="fa fa-angle-right text-white mr-2"></i>Жашыруун саясат</a>
+                <a class="text-body mb-2" href="#"><i class="fa fa-angle-right text-white mr-2"></i>Шарттар жана шарттар</a>
+                <a class="text-body mb-2" href="#"><i class="fa fa-angle-right text-white mr-2"></i>Каттоо</a>
+                <a class="text-body mb-2" href="#"><i class="fa fa-angle-right text-white mr-2"></i>Кайтаруу</a>
+                <a class="text-body" href="#"><i class="fa fa-angle-right text-white mr-2"></i>Жардам</a>
             </div>
         </div>
         <div class="col-lg-3 col-md-6 mb-5">
-            <h4 class="text-uppercase text-light mb-4">Car Gallery</h4>
+            <h4 class="text-uppercase text-light mb-4">Juguruk Gallery</h4>
             <div class="row mx-n1">
                 <div class="col-4 px-1 mb-2">
                     <a href=""><img class="w-100" th:src="@{/img/gallery-1.jpg}" alt=""></a>
@@ -294,17 +295,13 @@
     </div>
 </div>
 <div class="container-fluid bg-dark py-4 px-sm-3 px-md-5">
-    <p class="mb-2 text-center text-body">&copy; <a href="#">Your Site Name</a>. All Rights Reserved.</p>
-    <p class="m-0 text-center text-body">Designed by <a href="https://htmlcodex.com">HTML Codex</a></p>
+    <p class="mb-2 text-center text-body">&copy; <a href="#">JUGURUK</a>. Бардык укуктар корголгон.</p>
+    <p class="m-0 text-center text-body">Дизайн <a href="https://htmlcodex.com">HTML Codex</a> тарабынан</p>
 </div>
-<!-- Footer End -->
 
-
-<!-- Back to Top -->
 <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="fa fa-angle-double-up"></i></a>
 
 
-<!-- JavaScript Libraries -->
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
 <script th:src="@{/lib/easing/easing.min.js}"></script>
@@ -314,25 +311,21 @@
 <script th:src="@{/lib/tempusdominus/js/moment-timezone.min.js}"></script>
 <script th:src="@{/lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js}"></script>
 
-<!-- Template Javascript -->
+
 <script th:src="@{/js/main.js}"></script>
 
-<!-- WhatsApp Function -->
+
 <script>
     function openWhatsApp(carName, carPrice) {
-        // Замените этот номер на номер телефона админа (в международном формате, без +)
-        const adminPhone = '996776203384';
+        const adminPhone = '996755001008';
 
         const message = `Здравствуйте! Меня интересует: ${carName}  Цена: ${carPrice} сом
         Можете предоставить дополнительную информацию об этом товаре?`;
 
-        // Кодируем сообщение для URL
         const encodedMessage = encodeURIComponent(message);
 
-        // Создаем ссылку WhatsApp
         const whatsappURL = `https://wa.me/${adminPhone}?text=${encodedMessage}`;
 
-        // Открываем WhatsApp в новом окне
         window.open(whatsappURL, '_blank');
     }
 </script>
